--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.cl-footer > [class^="cl-internal-"] {
+    display: none !important;
+}
+
 /*:root {*/
 /*  --background: #ffffff;*/
 /*  --foreground: #171717;*/
